// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`COMPONENT - Input renders correctly Input 1`] = `
.c0 {
  border: 1px solid #b0b0b0;
  height: 4rem;
  padding: 0 1rem;
  font-size: 1.8rem;
  outline: 0;
  width: 100%;
}

.c0:disabled {
  background-color: #b0b0b0;
}

.c0:focus {
  border-color: #00a09f;
}

<input
  className="c0"
  placeholder="Dummy placeHolder"
  type="text"
/>
`;

exports[`COMPONENT - Input renders correctly Input with error 1`] = `
.c0 {
  border: 1px solid #e0151d;
  height: 4rem;
  padding: 0 1rem;
  font-size: 1.8rem;
  outline: 0;
  width: 100%;
}

.c0:disabled {
  background-color: #b0b0b0;
}

.c0:focus {
  border-color: #e0151d;
}

<input
  className="c0"
  placeholder="Dummy placeHolder"
  type="text"
/>
`;
